made changes in background and added some extra touch to website

--- a/index.css
+++ b/index.css
@@ -1,6 +1,14 @@
-*{
-    background-color: rgb(120, 201, 255);
+ *{
+    /*background-color: rgb(120, 201, 255); */
+    
+    /* background-color: #ddd0c8; */
     color: #000000;
+    /* margin: 0;
+    padding: 0;
+    box-sizing: border-box; */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 html{
     scroll-behavior: smooth;
@@ -20,11 +28,12 @@ html{
     /* position: fixed; */
     /* margin-top: -150px; */
     /* border: rgb(0, 68, 255); */
+    background-color: #ddd0c8;
 }
 
 .class {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     margin: 13px; 
     text-align: center;
     text-decoration: none;
@@ -32,8 +41,9 @@ html{
     /* align-items: center; */
     font-size: 45px;
     padding-right: 3px;
-    font-family: 'Sedgwick Ave Display', cursive;
-    font-family: 'Skranji', cursive;
+    /* font-family: 'DM Sans', sans-serif;
+    font-family: 'Bebas Neue', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -44,15 +54,15 @@ html{
 #home{
     text-align: center;
     font-family: 'Calligraffitti', cursive;
-    margin-top: 200px;
+    margin-top: 2px;
     font-size: 70px;
-   /* background-image: url( https://source.unsplash.com/random/); */
-   justify-content: center;
-   /* opacity: 0.5; */
+    justify-content: center;
+    /* background-size: 100% 100%; */
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'DM Sans', sans-serif;
+    background-image: url(bg8.jpg);
 }
 #home img{
-    /* height: 1000px; */
-    /* margin-top: 30px; */
     height: 1080px;
     width: 1920px;
     opacity: 2;
@@ -61,7 +71,9 @@ html{
     margin-bottom: 20px;
     font-weight: bold;
     font-display: 123;
-    
+    font-size: 70px ;
+    color: #323232;
+    text-align: center;
 }
 
 
@@ -69,10 +81,12 @@ html{
 /* Test section */
 #Test{
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
-    margin-top: 200px;
+    /* font-family: 'Calligraffitti', cursive; */
+    margin-top: -60px;
     font-size: 70px;
     /* background-color: chartreuse; */
+    background-image: url(bg8.jpg);
+    font-family: 'DM Sans', sans-serif;
 }
 #Test img{ 
     /* margin-top: 150px; */
@@ -98,19 +112,19 @@ html{
 
 
 
-/* Solution */
+/* Suggestion */
 #suggestion{
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
-    margin-top: 200px;
+    /* font-family: 'Calligraffitti', cursive; */
+    margin-top: -50px;
     font-size: 70px;
+    background-image: url(bg8.jpg);
+    font-family: 'DM Sans', sans-serif;
 }
-#solution img{
-   
-    /* margin-top: 150px; */
-    height: 1080px;
-    width: 1920px;
-    opacity: 2;
+#video{
+    text-align: center;
+    align-items: center;
+    /* margin-left: 80px; */
 }
 #suggestion ul{
     text-align: left;
@@ -118,21 +132,42 @@ html{
     font-weight: bold;
 }
 #suggestion ul :hover{
-  color: yellow;
+  /* color: yellow; */
+  color: rgb(0, 114, 95);
+  /* cursor: progress ; */
+}
+.song{
+    text-align: left;
+}
+.video{
+    text-align: justify;
+}
+.songpng{
+    height: 0100px;
+    width: 100px;
+}
+.videopng{
+    height: 0100px;
+    width: 100px;
+}
+#Videos{
+    margin-left: 500px;
+    margin-top: -500px;
 }
 
 
-
-/* suggestions */
+/* solution*/
 
 #solution{
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
-    margin-top: 200px;
+    /* font-family: 'Calligraffitti', cursive; */
+    margin-top: -50px;
     font-size: 70px;
+    font-family: 'DM Sans', sans-serif;
+    background-image: url(bg8.jpg);
 
 }
-#Solution img{
+#solution img{
     /* margin-top: 150px; */
     height: 1080px;
     width: 1920px;
@@ -143,9 +178,11 @@ html{
 /* Reviews */
 #reviews{
     text-align: center;
-    font-family: 'Calligraffitti', cursive;
-    margin-top: 200px;
-    font-size: 200px;
+    /* font-family: 'Calligraffitti', cursive; */
+    margin-top: -60px;
+    font-size: 150px;
+    background-image: url(bg8.jpg);
+    font-family: 'DM Sans', sans-serif;
 }
 #text{
     height: 800px;
